--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,3 +23,25 @@
 <script type="text/javascript" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 </script>
+
+<script type="text/x-mathjax-config">
+  MathJax.startup.ready = () => {
+    MathJax.startup.defaultReady();
+    MathJax.tex2chtml.preprocessors.push((data) => {
+      // Look for '$' ... '$' for inline math
+      data.math = data.math.replace(/(^|[^\\])\$/g, '$1\\(');
+      data.math = data.math.replace(/\$(?![^\\])/g, '\\)');
+    });
+  };
+  // MathJax 3 configuration for delimiters
+  MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']],
+      displayMath: [['$$', '$$'], ['\\[', '\\]']],
+      processEscapes: true
+    },
+    options: {
+      skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
+    }
+  };
+</script>
