--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -18,24 +18,23 @@
 <link rel="icon" href="{{ base_path }}/images/favicon.ico"/>
 <meta name="theme-color" content="#ffffff"/>
 
-<!-- MathJax v2 configuration -->
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
     tex2jax: {
-      // Inline math: \( ... \)
-      inlineMath: [['\\(','\\)']],
-      // Display math: $$ ... $$  or  \[ ... \]
-      displayMath: [['$$','$$'], ['\\[','\\]']],
-      processEscapes: true,
-      processEnvironments: true,
-      skipTags: ['script','noscript','style','textarea','pre','code']
-    }
+      inlineMath: [ ['$$','$$'], ["\\(","\\)"] ],
+      displayMath: [ ['$$','$$'], ["\\(","\\)"] ],
+    },
+    TeX: {
+      Macros: {
+        bra: ["\\langle{#1}|", 1],
+        ket: ["|{#1}\\rangle", 1],
+        braket: ["\\langle{#1}\\rangle", 1],
+        bk: ["\\langle{#1}|{#2}|{#3}\\rangle", 3]
+     }
+   }
   });
 </script>
 
-<!-- Load MathJax from CDN -->
-<script async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
 <!-- end custom head snippets -->
