--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -6,35 +6,21 @@
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
 
 <!-- favicon from https://commons.wikimedia.org/wiki/File:OOjs_UI_icon_academic-progressive.svg -->
-<link rel="apple-touch-icon" sizes="180x180"
-      href="{{ base_path }}/images/apple-touch-icon-180x180.png"/>
-<link rel="icon" type="image/svg+xml"
-      href="{{ base_path }}/images/favicon.svg"/>
-<link rel="icon" type="image/png" sizes="32x32"
-      href="{{ base_path }}/images/favicon-32x32.png"/>
-<link rel="icon" type="image/png" sizes="192x192"
-      href="{{ base_path }}/images/favicon-192x192.png"/>
+<link rel="apple-touch-icon" sizes="180x180" href="{{ base_path }}/images/apple-touch-icon-180x180.png"/>
+<link rel="icon" type="image/svg+xml" href="{{ base_path }}/images/favicon.svg"/>
+<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon-32x32.png" sizes="32x32"/>
+<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon-192x192.png" sizes="192x192"/>
 <link rel="manifest" href="{{ base_path }}/images/manifest.json"/>
-<link rel="icon" href="{{ base_path }}/images/favicon.ico"/>
+<link rel="icon" href="/images/favicon.ico"/>
 <meta name="theme-color" content="#ffffff"/>
 
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-    tex2jax: {
-      inlineMath: [ ['$$','$$'], ["\\(","\\)"] ],
-      displayMath: [ ['$$','$$'], ["\\(","\\)"] ],
-    },
-    TeX: {
-      Macros: {
-        bra: ["\\langle{#1}|", 1],
-        ket: ["|{#1}\\rangle", 1],
-        braket: ["\\langle{#1}\\rangle", 1],
-        bk: ["\\langle{#1}|{#2}|{#3}\\rangle", 3]
-     }
-   }
-  });
+<script>
+MathJax = {
+  tex: {
+    inlineMath: {'[+]': [['$', '$']]}
+  }
+};
 </script>
-
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML' async></script>
+<script defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-chtml.js"></script>
 
 <!-- end custom head snippets -->
