--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -14,13 +14,23 @@
 <link rel="icon" href="/images/favicon.ico"/>
 <meta name="theme-color" content="#ffffff"/>
 
+<!-- Put this in your <head>, e.g. _includes/head/custom.html -->
+
 <script>
-MathJax = {
+window.MathJax = {
   tex: {
-    inlineMath: {'[+]': [['$', '$']]}
+    inlineMath: [['$', '$'], ['\\(', '\\)']],
+    displayMath: [['$$', '$$'], ['\\[', '\\]']],
+    processEscapes: true
+  },
+  options: {
+    skipHtmlTags: ['script','noscript','style','textarea','pre','code']
   }
 };
 </script>
-<script defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-chtml.js"></script>
 
-<!-- end custom head snippets -->
+<script
+  id="MathJax-script"
+  async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+</script>
